dark navbar and overflow fix

--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -7,7 +7,7 @@
 }
 nav {
   height: 8vh;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 24, 59, 0.7);
   position: relative;
 }
 
